# Location-Tracker

./: main.py  pyproject.toml
static/js/: location.js
templates/: index.html
